获取成绩组成，并把成绩组成放到课表详细里面